[package]
name = "pxtone"
description = "High level bindings to pxtone for Rust"
repository = "https://github.com/PieKing1215/rust-pxtone"
version = "0.1.0"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pxtone", "audio", "parsing"]
categories = ["multimedia::audio", "parser-implementations"]
edition = "2021"

[dependencies]
pxtone-sys = { version = "0.2", optional = true }

[features]
default = ["og-impl"]
og-impl = ["dep:pxtone-sys"]

[dev-dependencies]
cpal = "0.14"