[package]
name = "pxtone"
description = "High level bindings to pxtone for Rust"
repository = "https://github.com/PieKing1215/rust-pxtone"
version = "0.1.0"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pxtone", "audio", "parsing"]
categories = ["multimedia::audio", "parser-implementations"]
edition = "2021"

[dependencies]
pxtone-sys = { version = "0.2", optional = true }
byteorder = { version = "1", optional = true }
profiling = "1.0"

[features]
default = ["og-impl", "rust-impl"]
og-impl = ["dep:pxtone-sys"]
rust-impl = ["dep:byteorder"]
profile = ["profiling/profile-with-tracy"]

[dev-dependencies]
cpal = "0.14"

[profile.release]
lto = "thin"